results visibility fixed

--- a/src/App.css
+++ b/src/App.css
@@ -152,7 +152,6 @@ h1
 /* Footer CSS Styling */
 .footer {
   position: absolute;
-  left: 0;
   bottom: 0;
   width: 100%;
   background-color: lightslategray;
@@ -162,7 +161,7 @@ h1
 
 /* Body CSS Styling */
 .body {
-  position: absolute;
+  position: relative;
   left: 10%;
   right: 10%;
   width: 80%;
@@ -177,6 +176,8 @@ h1
 }
 
 /* SCROLLABLE */
-.scroll {
+.whole-page {
   overflow: auto;
+  position: relative;
+  min-height: 150vh;
 }
